[gd_scene load_steps=8 format=3 uid="uid://dl3mqmtt4hpof"]

[ext_resource type="CodeHighlighter" uid="uid://pew04qufu47c" path="res://resources/player_code_highlighter.tres" id="1_424wy"]
[ext_resource type="Theme" uid="uid://dorv4eu1o1eje" path="res://resources/code_window_theme.tres" id="1_dhmkb"]
[ext_resource type="Script" path="res://player_editor.gd" id="1_j8a5t"]
[ext_resource type="Script" path="res://scenes/code_edit_test.gd" id="1_s36ft"]
[ext_resource type="Script" path="res://console.gd" id="5_a081q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_td1fi"]
bg_color = Color(0.247059, 0.443137, 0.584314, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2egim"]
bg_color = Color(0.603922, 0.321569, 0.376471, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Window" type="Window" node_paths=PackedStringArray("code_edit", "console")]
position = Vector2i(10, 36)
size = Vector2i(735, 585)
script = ExtResource("1_s36ft")
code_edit = NodePath("CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/CodeEditTest/Robot1")
console = NodePath("CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer/PanelContainer/RichTextLabel")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dhmkb")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_dhmkb")

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CodeEditTest" type="TabContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Robot1" type="CodeEdit" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/CodeEditTest"]
layout_mode = 2
size_flags_vertical = 3
minimap_draw = true
syntax_highlighter = ExtResource("1_424wy")
highlight_current_line = true
draw_tabs = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
code_completion_enabled = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_j8a5t")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.83

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
scroll_following = true
script = ExtResource("5_a081q")

[node name="GridContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Go"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="Pause" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_td1fi")
text = "Pause"

[node name="Kill" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_2egim")
text = "Kill"

[connection signal="size_changed" from="." to="CanvasLayer/PanelContainer" method="_on_window_size_changed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer/GridContainer/Button" to="." method="_on_run_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer/GridContainer/HBoxContainer/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VSplitContainer/HBoxContainer/GridContainer/HBoxContainer/Kill" to="." method="_on_kill_pressed"]
